--- a/frontend/my-react/src/components/products/Products.css
+++ b/frontend/my-react/src/components/products/Products.css
@@ -1,6 +1,7 @@
 .products-container {
   margin-left: 25%;
-  width:500px;
+  width:800px;
+  height: auto;
   display: flex;
   overflow-x: auto;  /* Enable horizontal scrolling */
   padding: 16px;
