--- a/frontend/my-react/src/components/Homepage.css
+++ b/frontend/my-react/src/components/Homepage.css
@@ -1,7 +1,7 @@
 .homepage {
   text-align: center;
   padding: 50px;
-  background-image: url("C./Screenshot 2024-06-23 064741.png"); /* Sample background image */
+  background-image: url("./Screenshot 2024-06-23 064741.png"); /* Sample background image */
   background-size: cover;
   background-position: center;
 
