--- a/frontend/my-react/src/components/chatbot/ChatBox.css
+++ b/frontend/my-react/src/components/chatbot/ChatBox.css
@@ -55,7 +55,7 @@ input[type="text"] {
   font-size: 16px;
 }
 
-button {
+.button-chatbot {
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
